--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ environment:
 
 assembly_info:
   patch: true
-  file: src/HtmlSanitizer/Properties/AssemblyInfo.cs
+  file: "src/HtmlSanitizer/Properties/AssemblyInfo.cs"
   assembly_version: '{version}'
 
 nuget:
